styles/task-bar.css
/* Items container */
.task-bar {
  display: flex;
  flex: 1;
  flex-direction: column;
  gap: 15px;
  padding: 15px;
  background-color: white;
}


.task, .subtask {
  color: #090909;
  border-radius: 0.5em;
  background-color: #f5f5f5;
  cursor: pointer;
  border: 1px solid #f5f5f5;
  transition: all 0.3s;
  box-shadow:
    6px 6px 12px #c5c5c5,
    -6px -6px 12px #ffffff;
  font-size: 1em;
  padding: 12px;
  cursor: pointer;
  transition: background-color 0.15s, font-size 0.15s, box-shadow 0.15s;
  margin-left: 5px;
  margin-right: 5px;
  user-select: none;  
}

.subtask {
  margin-left: 30px;
}

.task:hover, .subtask:hover {
  font-size: 1.1em;
}

.task:active, .subtask:active {
    color: #666;
    box-shadow:
      0px 0px 0px #c5c5c5,
      0px 0px 0px #ffffff,
      inset 4px 4px 12px #c5c5c5,
      inset -4px -4px 12px #ffffff;
}

